Add kicad_pcb-diff tooling

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,5 @@
 [filter "net_filter"]
 	clean = sed -E -e 's/\\(date \\\".*\\\"\\)/\\(date \\\"Date\\\"\\)/'
 	smudge = sed -E -e \"s/\\(date \\\"Date\\\"\\)/\\(date \\\"`date +\\\"%a %d %b %Y %X %:::z\\\"`\\\"\\)/\"
+[diff "kicad_pcb_diff"]
+	command=/usr/local/bin/kicad_pcb-git-diff.py -v
